# mtd-ventura

./: CMakeLists.txt
include/: batch.h  game.h  moves.h  remain_strat1.h  remain_strat2.h  strat.h  text.h
source/: batch.cpp  game.cpp  main.cpp  moves.cpp  strat.cpp  text.cpp
test/: slow.txt  test_chain.cpp  test_shuffle.cpp  test_tile.cpp
